	 timings of "extended NOP" opcodes (partial fix for bug #1526868)
20060723 z80/{z80.pl,z80_macros.h}: move tstate addition out of ADD16 macro
	 for consistency with ADC16 and SBC16.
20060726 machines/ts2068.c: change TS2068 machine id to match tape loading snap
         name (fixes bug #1526688; thanks Phil!) (Fred).
20060729 fuse.c: reenable sound in fuse_emulation_unpause (Fred).
20060730 z80/z80.c: IM 0 takes 13 tstates to acknowledge (partial fix for
	 bug #1526868).
20060730 z80/{z80.pl,z80_macros.h}: add IR contention (thanks, Mark Woodmass)
	 (patch #1527439).
20060730 z80/tests/{[0123][39b],10,[cdef][08]_[12],[cdef]5,[cdef][7f],f9,
	 [df]d{[0123]9,2[3b],e5,f9},ed{[4567][2a],[45][7f],[ab][23ab]}}.
	 {in,out}: update tests for IR contention.
20060730 Makefile.am,loader.[ch],menu.c,settings.dat,spectrum.c,tape.[ch],
	 ula.c,lib/{un,}compressed/tape_{16,48,128,plus2,pentagon,scorpion,
	 2048,ts2068}.szx,ui/options.dat: loader detection (patch
	 #1511906).
20060730 tape.c: don't use tape traps unless we're at the very start of a
	 ROM block (partial fix for bug #1531346).
20060731 display.[ch],event.[ch],machine.[ch],memory.c,scld.c,screenshot.c,
         machines/{scorpion.c,spec128.c,specplus3.c},
         hacking/implementation_notes.txt: new character based renderer fixes
         regressions with various demos and mixed mode Timex screens (fixes
         bug #1105190) (Fred).
20060801 display.c: integrate border with display_last_screen and use
         display_plot8 for drawing (Fred).
20060801 event.c: store old events in a free list rather than mallocing and
         freeing them each time (Fred).
20060809 event.c: use a single free element pointer rather than a list for
         more speed (Fred).
20060809 display.c: don't use get_beam_position in display_write, replace the
         three individual display cache elements with a single dword for faster
         aligned access, comparison and assignment (Fred).